# ICP-101xx_RivalLab

./: CMakeLists.txt  Client.cpp  README.md  Server.cpp  Server.ino  icp101xx.cpp
ICP-101xx_Lib_RivalLab/: icp101xx.cpp
extras/: ICP101xx_RivalLab_x - Shortcut.lnk
myTest/: CMakeLists.txt  tester.c
server-client/: CMakeLists.txt  main.c
